
- Allowed negative strikes in BlackFormula, as long as the strike plus
  the displacement is still positive (thanks to Peter Caspers).

- Added calculation of implied volatility from Bachelier price in
  BlackFormula (thanks to Gary Kennedy).

- Added Broadie-Kaya exact simulation schema to Heston model (thanks
  to Klaus Spanderen).

CASH FLOWS

- Added support for ex-coupon dates to cashflow calculations (thanks
  to Nick Glass). Currently, ex-coupons dates can be specified for
  fixed rate bonds.

- Fixed calculation of duration and convexity when using Act/Act(ISMA)
  (thanks to Nick Glass).

INDEXES

- Fixed IborCoupon construction with null fixing days.
  The coupon was used the passed fixing days instead of the ones
  previously processed by the base class constructor (thanks to Lisa
  Ann and Gerardo Ballabio for the heads-up).

- Add a clone() method to SwapIndex which allows to change the tenor
  (thanks to Peter Caspers).

- Ignore inflation-index fixings stored at dates later than the
  evaluation date.

- Added utility class for creating custom Region instances to be
  passed to inflation indexes.

TERM STRUCTURES

- Prevent some errors when linking a null term structure to a Handle.
  When settings a null term structure to a Handle used as an
  underlying for another curve (say, a zero-spreaded curve), the
  latter tries to reset the jumps in the base class and fails. This
  error is now trapped. (Thanks to Christoph Breig for the heads-up.)

- Fix interpolation of option dates in SwaptionVolatilityDiscrete and
  derived classes when evaluation date changes (thanks to Shen Hui).

- Piecewise-spreaded curve can now choose interpolation (thanks to
  Mario Aleppo).

MATH

- Extended Sobol direction numbers up to 21200 dimensions with Joe Kuo 6
  searching rule (thanks to Cheng Li).

- Added class for two-dimensional integration (thanks to Klaus Spanderen).

- Added Maddock inverse-cumulative normal distribution from Boost
  (thanks to Klaus Spanderen).
