@@ -58,7 +58,7 @@ namespace QuantLib {
         virtual Real discountBondOption(Option::Type type,
                                         Real strike,
                                         Time maturity, Time bondStart,
-                                        Time bondMaturity) const { 
+                                        Time bondMaturity) const {
             return discountBondOption(type,strike,maturity,bondMaturity);
         }
 
@@ -152,6 +152,7 @@ namespace QuantLib {
           public:
             Impl(const std::vector<Parameter>& arguments)
             : arguments_(arguments) {}
+
             bool test(const Array& params) const {
                 Size k=0;
                 for (Size i=0; i<arguments_.size(); i++) {
@@ -164,6 +165,47 @@ namespace QuantLib {
                 }
                 return true;
             }
+
+            Array upperBound(const Array &params) const {
+                Size k = 0, k2 = 0;
+                Size totalSize = 0;
+                for (Size i = 0; i < arguments_.size(); i++) {
+                    totalSize += arguments_[i].size();
+                }
+                Array result(totalSize);
+                for (Size i = 0; i < arguments_.size(); i++) {
+                    Size size = arguments_[i].size();
+                    Array partialParams(size);
+                    for (Size j = 0; j < size; j++, k++)
+                        partialParams[j] = params[k];
+                    Array tmpBound =
+                        arguments_[i].constraint().upperBound(partialParams);
+                    for (Size j = 0; j < size; j++, k2++)
+                        result[k2] = tmpBound[j];
+                }
+                return result;
+            }
+
+            Array lowerBound(const Array &params) const {
+                Size k = 0, k2 = 0;
+                Size totalSize = 0;
+                for (Size i = 0; i < arguments_.size(); i++) {
+                    totalSize += arguments_[i].size();
+                }
+                Array result(totalSize);
+                for (Size i = 0; i < arguments_.size(); i++) {
+                    Size size = arguments_[i].size();
+                    Array partialParams(size);
+                    for (Size j = 0; j < size; j++, k++)
+                        partialParams[j] = params[k];
+                    Array tmpBound =
+                        arguments_[i].constraint().lowerBound(partialParams);
+                    for (Size j = 0; j < size; j++, k2++)
+                        result[k2] = tmpBound[j];
+                }
+                return result;
+            }
+
           private:
             const std::vector<Parameter>& arguments_;
         };
